# llama-python-gui

./: .gitignore  README.md  pyproject.toml
llama_python_gui/: _config.py  _utils.py  config.json
llama_python_gui/assets/: resource.py  resource.qrc
llama_python_gui/services/: server.py
llama_python_gui/views/: mainview.py
llama_python_gui/views/components/: __init__.py  contentview.py
llama_python_gui/workers/: __init__.py
tests/: test_mainview.py  test_textedit.py
